🐛 Fix .profile