@@ -1,20 +1,22 @@
-CUSTOM_PATH_LIST=(
-  "$DOTFILES_PATH/bin"
-  "$DOTFILES_PATH/bin/external"
-  "/home/linuxbrew/.linuxbrew/bin"
-  "/home/linuxbrew/.linuxbrew/sbin"
-  "/usr/lib/jvm/java-15-oracle/bin"
-  "/usr/lib/jvm/java-15-oracle/db/bin"
-)
 
-CUSTOM_PATH=$(
-  IFS=":"
-  echo "${CUSTOM_PATH_LIST[*]}"
-)
+# Default editor
+export EDITOR='vim'
 
-export PATH="${CUSTOM_PATH}:${PATH}"
-export GOPATH="$HOME/.go"
-export EDITOR="vim"
+# Default browser
+export BROWSER='google-chrome'
+
+# Default pager
+export PAGER='less'
+
+# JVM
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512M -Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n"
+export JAVA_TOOLS_OPTIONS='-Dfile.encoding="UTF-8"'
+
+# Golang
+export GOPATH="${HOME}/.go"
+export GOBIN="${GOPATH}/bin"
+
+
 export FZF_DEFAULT_OPTS=$FZF_DEFAULT_OPTS"
   --color=fg:#e5e9f0,hl:#81a1c1
   --color=fg+:#e5e9f0,bg+:#3b4252,hl+:#81a1c1,border:#3c6e71
@@ -29,3 +31,20 @@ export FZF_DEFAULT_OPTS=$FZF_DEFAULT_OPTS"
   --info=inline
 "
 export FORGIT_FZF_DEFAULT_OPTS=$FZF_DEFAULT_OPTS$FORGIT_FZF_DEFAULT_OPTS
+
+CUSTOM_PATH_LIST=(
+  "$DOTFILES_PATH/bin"
+  "$DOTFILES_PATH/bin/external"
+  "$GOBIN"
+  "/home/linuxbrew/.linuxbrew/bin"
+  "/home/linuxbrew/.linuxbrew/sbin"
+  "/usr/lib/jvm/java-15-oracle/bin"
+  "/usr/lib/jvm/java-15-oracle/db/bin"
+)
+
+CUSTOM_PATH=$(
+  IFS=":"
+  echo "${CUSTOM_PATH_LIST[*]}"
+)
+
+export PATH="${CUSTOM_PATH}:${PATH}"
